--- a/styles/style.css
+++ b/styles/style.css
@@ -243,5 +243,62 @@ address {
         margin-top: 30px;
 }
 
+.about_column {
+        display: grid;
+        grid-template-columns: 334px 1fr;
+        justify-items: center;
+        grid-template-areas:
+                "logo about_title"
+                ". first"
+                ". second";
+        gap: 24px;
+}
+
+.logo {
+        grid-area: logo;
+        background-color: #000000;
+        width: 240px;
+        height: 240px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+
+}
+
+.image_logo {
+        width: 148px;
+        height: 114px;
+}
+
+.about_title {
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 40px;
+        align-self: center;
+        justify-self: start;
+
+
+}
+
+.about_text {
+        font-weight: 400;
+        font-size: 20px;
+
+
+}
+
+.first  {
+        grid-area: first;
+        margin-top: -16px;
+
+}
+
+.second {
+        grid-area: second;
+}
+
+
 
 
