sections cover+lots+about+footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -307,6 +307,7 @@ address {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         justify-items: center;
+        margin-bottom: 82px;
 
 
 }
