--- a/styles/style.css
+++ b/styles/style.css
@@ -252,6 +252,7 @@ address {
         font-size: 20px;
         color: #000;
         margin-top: 30px;
+        margin-left: 40px;
 }
 
 .about_column {
