--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ header {
 
 .nav_link {
         display: flex;
-        gap: 25px;
+        gap: 32px;
         list-style: circle;
         font-size: 18px;
         font-weight: 400;
@@ -21,10 +21,12 @@ header {
 .header_logo {
         display:block;
         width: 130px;
+        height: 105px;
 }
 
 .header_logo img {
         width: 100%;
+        height: 100%;
 }
 
 address {
