--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ header {
         padding: 92px 50px 96px 50px;
 }
 
-.nav_link {
+.nav_list {
         display: flex;
         gap: 32px;
         list-style: circle;
@@ -16,6 +16,10 @@ header {
 
 .header_links-list-item_no-bullit {
         list-style: none;
+}
+
+.active_link {
+        text-decoration: none;
 }
 
 .header_logo {
@@ -36,6 +40,9 @@ address {
         justify-self: end;
         align-items: flex-start;
         font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 24px;
 }
 
 .cover {
@@ -52,7 +59,7 @@ address {
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgb(0 0 0 / 0.5);
+        background-color: rgb(0 0 0 / 0.6);
         z-index: 0;
 }
 
@@ -63,10 +70,12 @@ address {
         font-size: 100px;
         font-weight: 700;
         letter-spacing: 0.3em;
+        line-height: 115%;
         color: #fff;
         margin: 0 50px ;
-        padding: 0;
+        padding: 165px 0 0 0;
         width: 1000px;
+
 
 
 }
@@ -77,16 +86,16 @@ address {
         z-index: 2;
 }
 
-.ono {
+.text_left {
         align-self: flex-start;
-        margin-top: 165px;
+
 }
 
-.tebe {
+.text_center {
         align-self: center;
 }
 
-.nado {
+.text_right {
 
         align-self: flex-end;
         padding-bottom: 0;
@@ -107,27 +116,7 @@ address {
         line-height: 28px;
         text-transform: uppercase;
         z-index: 2;
-}
-
-
-.auction {
         word-spacing: 20px ;
-}
-
-.veschey {
-        word-spacing: 17px ;
-}
-
-.kotory {
-        word-spacing: 18px ;
-}
-
-.nikto {
-        word-spacing: 20px ;
-}
-
-.ne_veril {
-        word-spacing: 19px ;
 }
 
 .bet-button {
@@ -143,7 +132,12 @@ address {
         z-index: 2;
 }
 
-.card-title {
+
+.lots {
+        padding: 180px 24px 120px 24px ;
+}
+
+.lots-title {
         text-transform: uppercase;
         font-weight: 700;
         font-size: 40px;
@@ -182,7 +176,7 @@ address {
         background-image: url('../images/card-lot-01.jpg');
 }
 
-.card_film_title {
+.card_title {
         text-decoration: underline solid #FFFFFF;
         color: #fff;
         text-transform: uppercase;
@@ -192,7 +186,7 @@ address {
 
 }
 
-.card_film_text {
+.card_text {
         color: #fff;
         font-weight: 400;
         font-size: 20px;
@@ -204,51 +198,8 @@ address {
 
 }
 
-.card_book_title {
-        text-decoration: underline solid #FFFFFF;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 22px;
-        z-index: 1;
-}
-
-.card_book_text {
-        color: #fff;
-        font-weight: 400;
-        font-size: 20px;
-        z-index: 1
-
-}
-
 .card_paint {
         background-image: url('../images/card-lot-03.jpg');
-}
-
-.card_paint_title {
-        text-decoration: underline solid #FFFFFF;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 22px;
-        z-index: 1;
-}
-
-.card_paint_text {
-        color: #fff;
-        font-weight: 400;
-        font-size: 20px;
-        z-index: 1
-}
-
-.card-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgb(0 0 0 / 0.5);
-        z-index: 0;
 }
 
 .see_more {
@@ -259,14 +210,18 @@ address {
         margin-left: 40px;
 }
 
+.about {
+        margin: 35px 24px 180px 24px ;
+}
+
 .about_column {
         display: grid;
         grid-template-columns: 334px 1fr;
         justify-items: center;
         grid-template-areas:
                 "logo about_title"
-                ". first"
-                ". second";
+                ". about_text"
+                ;
         gap: 24px;
 }
 
@@ -287,6 +242,7 @@ address {
 }
 
 .about_title {
+        grid-area: about_title;
         text-transform: uppercase;
         font-weight: 700;
         font-size: 40px;
@@ -297,8 +253,14 @@ address {
 .about_text {
         font-weight: 400;
         font-size: 20px;
-}
+        grid-area: about_text;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
 
+        /*margin-top: -16px;*/
+}
+/*
 .first {
         grid-area: first;
         margin-top: -16px;
@@ -307,7 +269,7 @@ address {
 .second {
         grid-area: second;
 }
-
+*/
 .footer {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -320,9 +282,7 @@ address {
 .footer_address {
         padding-left: 50px;
         justify-self: start;
-        font-size: 18px;
-        font-weight: 400;
-        font-style: normal;
+
 }
 
 .nav_footer {
@@ -331,6 +291,7 @@ address {
         align-items: center;
         font-size: 18px;
         font-weight: 400;
+        list-style: none;
 }
 
 .footer_social-list {
